@@ -5,6 +5,8 @@
 	added missing quote method to pdo driver
 	fixed a subtle login/ping bug in the router
 	fixed a memory leak in the sqlrclient protocol module
+	postgresql connection uses async functions and fetches one row at a
+		time now, if available
 
 1.0.1 - updated sqlr-bench to create "db"-bench.png
 	added edoc-generated API docs for the Erlang API
